# MalwareSourceCode

./: EncryptedFilesRemaining.txt  README.md
Acad/: Pobresito.acad  Virus.Acad.Galaxy  Virus.Acad.Star
Android/: Android.BrkwlLoader.7z  Android.GmBot.rar  Android.Rootkit.Adore.7z
Engines/: Virus.Linux.Lime.7z  Virus.Win32.Alma.7z  Virus.Win32.Antiweb.7z  Virus.Win32.Ape.7z  Virus.Win32.Dina.7z  Virus.Win32.Expo.7z  Virus.Win32.Flying.asm  Virus.Win32.Morpher.a.asm  Virus.Win32.Morpher.b.asm  Virus.Win32.NBKPE.txt  Virus.Win32.Nazka.528  Virus.Win32.Plexar.asm  Virus.Win32.Real.inc  Virus.Win32.Simple.7z  Virus.Win32.Spectr0.7z  Virus.Win32.Vpe.7z  Virus.Win32.Xtg.7z  Virus.Win32.Yad13.7z
Java/: Ransomware.Java.Generic.Basic.a.7z  Trojan.Java.AppletKiller  Virus.EduApps.Sexo  Virus.Java.Ghotdog  Virus.Java.Hawk.a.txt
Javascript/: Javascript.Kaoom.Unknown.7z
Leaks/: Discord.Trojan.SpideyBot.a.txt
LegacyWindows/: Win2k.CannaByte.v2.asm  Win2k.Joss.asm  Win2k.TaiChi.asm  Win32.FirstBorn.txt  Win95.Espore.asm  Win95.Henze.asm  Win95.Invirsible.asm  Win95.Mad.2736.asm  Win95.Matrix.asm  Win95.Molly.725.asm  Win95.Obsolete.asm  Win95.Yildiz.asm  Win95.Zombie.asm  Win98.Milennium.asm  WinCE.Dust.TXT  (+2 more)
Win32/Proof of Concepts/ExtraWindowInject/src/: CMakeLists.txt  add_apc.h  add_thread.h  createproc.h  enumproc.h  kernel32_undoc.h  main.cpp  main.h  map_buffer_into_process.h  ntddk.h  ntdll_undoc.h  patch_context.h  patch_ep.h  payload.h  pe_hdrs_helper.cpp  pe_hdrs_helper.h  sysutil.cpp  sysutil.h  target_util.h  util.h  window_long_inject.cpp  window_long_inject.h
(+16486 files in other folders)
